<!--
  Open Chaos Chess is a free as in speech version of Chaos Chess
  Chaos Chess is a chess game where you control the piece that moves, but not how it moves
      Copyright (C) 2019  Noah Stanford <noahstandingford@gmail.com>

      Open Chaos Chess is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.

      Open Chaos Chess is distributed in the hope that it will be fun,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.

      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <https://www.gnu.org/licenses/>.
      -->
<resources>
    <string name="app_name">Open Chaos Chess</string>
    <string name="new_game">New Game</string>
    <string name="player_points">Player Points:   </string>
    <string name="computer_points">Computer Points:   </string>
    <string name="you_won">Noice dude! You Won!</string>
    <string name="you_lost">Dang dude, you lost!</string>
    <string name="cant_move_that_bruh">Can\'t move that, bruh!</string>
    <string name="not_your_turn_stupid">It\'s not your turn, bruh!</string>
    <string name="game_over_bruh">Game\'s over, bruh!</string>
    <string name="that_sucks">Aw dang dude, that sucks!</string>
    <string name="about">About</string>
    <string name="credits">v%1$s by Noah Stanford (aka CorruptedArk)
                            \n originally for CIS 175 Fall 2016 at MCCC as Chaos Chess
                            \n Credit for the color picker dialog goes to Simone Pessotto (aka Pes8)
                            \n Credit for the idea of color settings goes to Jonas Lowe
                            \n Credit for Chess960 mode, Queens Attack Handicap, Smart Computer, and other small changes goes to egorguslyan on GitHub
                            \n Credit for fixing text not showing properly in the settings activity for some display sizes
                            \n Credit for Russian translations goes to LibreHacker on GitHub
                            \n Credit for German translations goes to Lian C. Begett/RedsickleDE on GitHub
                            \n Credit for Turkish translations goes to berkaygunduzz on GitHub
                            \n Credit for Arabic translations and a quality of life improvement on captures goes to Vulldozer on GitHub
                            \n Credit for Spanish translations goes to sguinetti on GitHub
                            \n Credit for Indonesian translations goes to the7thNightmare on GitHub
                            \n The concept for Bloodthirst was suggested by czarkoff on GitHub
                            \n The Bloodthirst by default toggle was suggested by itsanogo on GitHub
                            \n The aggressive computer option was suggested by vi on GitHub
                            </string>
    <string name="descript">Open Chaos Chess is a free as in speech version of Chaos Chess.
                            Chaos Chess is a variation of chess where you can pick the piece that moves, but the moves are random. As such, you no longer win by checkmates. Instead, you win by eliminating your opponent\'s pieces. Have fun, and may the RNG be ever in your favor.
                            \n\nOpen Chaos Chess  Copyright © 2019 Noah Stanford
                            \nThis program comes with ABSOLUTELY NO WARRANTY.
                            \nThis is free software, and you are welcome to redistribute it under certain conditions.
                            \nFor the full GNU General Public License visit: https://www.gnu.org/licenses/gpl-3.0.txt
                            \n
                            \nBy default, pieces have no bias to attack. However, while Bloodthirst is active, pieces will always attack if possible.
                            </string>
    <string name="contact">Facebook: Noah James Stanford\nTwitter: @CorruptedArk\nGitHub: CorruptedArk\n\nMy Website: corruptedark.wordpress.com\n\nEmail: noahstandingford@gmail.com\n\n</string>
    <string name="tied_bro">OOOH IT\'S TIED, BRO!</string>
    <string name="noice">Noice!</string>
    <string name="quit">Quit</string>
    <string name="play">Solo Play</string>
    <string name="quick_match">Quick Match</string>
    <string name="create_game">Send Invite</string>
    <string name="check_invites">Check Invites</string>
    <string name="opponent_points">Opponent Points:   </string>
    <string name="your_points">Your Points:   </string>
    <string name="sign_out">Sign Out</string>
    <string name="slogan">You pick the piece, not the move</string>
    <string name="new_slogan">You pick the piece, not the move\nNow with more freedom!</string>
    <string name="secret_hello">Hello, I\'m not sure how you figured out how to get here. But, since you\'re here, may I ask your name?</string>
    <string name="background_color">Background Color:</string>
    <string name="bar_color">Bar Color:</string>
    <string name="secondary_color">Secondary Color:</string>
    <string name="board_color_1">Board Color 1:</string>
    <string name="board_color_2">Board Color 2:</string>
    <string name="piece_color">Piece Color:</string>
    <string name="selection_color">Selection Color:</string>
    <string name="set_to_defaults">Set to defaults</string>
    <string name="save_colors">Save Colors</string>
    <string name="text_color">Text Color:</string>
    <string name="settings_file">settings.txt</string>
    <string name="BT_UUID">fc0ebdde–e425–4123–92a8–17bd8a90a769</string>
    <string name="host_game">Host Game</string>
    <string name="join_game">Join Game</string>
    <string name="multiplayer_guide">If you haven\'t paired up with the device of your opponent, go into your device\'s settings and do so before you start connecting.</string>
    <string name="knights_only">Knights only?</string>
    <string name="start_host">Start Host</string>
    <string name="stop_host">Stop Host</string>
    <string name="paired_devices">Paired Devices:</string>
    <string name="host_status">Host status:</string>
    <string name="import_file">Import From File</string>
    <string name="export_file">Export to File</string>
    <string name="bloodthirst">Bloodthirst  </string>
    <string name="bloodthirst_notification">Bloodthirst will be toggled on new game</string>
    <string name="solo">Solo</string>
    <string name="versus">Versus</string>
    <string name="settings">Settings</string>
    <string name="colors_saved">Colors saved</string>
    <string name="color_save_failed">Colors failed to save</string>
    <string name="gameplay_settings_file">gameplaysettings.txt</string>
    <string name="bloodthirsty_by_default">Bloodthirsty by default</string>
    <string name="wait_for_move">Wait until the move has finished</string>
    <string name="bloodthirst_toggle_cancelled">Bloodthirst toggle cancelled</string>
    <string name="issues">Issues</string>
    <string name="issues_url">https://github.com/CorruptedArk/open-chaos-chess/issues</string>
    <string name="aggressive_computer">Aggressive computer</string>
    <string name="setting_applied_on_new_game">Setting will be applied on new game</string>
    <string name="plus_one">+1</string>
    <string name="enable_handicap">Enable handicap</string>
    <string name="chess960">Chess960 mode</string>
    <string name="queensAttack">Queens attack</string>
    <string name="smartComputer">Smart computer</string>
    <string name="move_second">Move second (Solo)</string>
</resources>
