<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.corruptedark.openchaoschess.MainActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_filledknight"
        android:id="@+id/knight_button"
        android:background="?android:attr/colorBackground"
        android:onClick="knightButtonClicked"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/play_button"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/mainImage"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/ic_icon"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/main_slogan"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/quit_button"
        android:layout_below="@+id/about_button"
        android:background="@color/colorAccent"
        android:textSize="25sp"
        android:onClick="quitButtonClicked"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/play_button"
        android:textSize="25sp"
        android:background="@color/colorAccent"
        android:onClick="playButtonClicked"
        android:layout_below="@+id/mainImage"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/create_game_button"
        android:textSize="25sp"
        android:background="@color/colorAccent"
        android:onClick="createGameButtonClicked"
        android:layout_below="@+id/play_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/check_invites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/check_invites_button"
        android:textSize="25sp"
        android:background="@color/colorAccent"
        android:onClick="checkInvitesButtonClicked"
        android:layout_below="@+id/create_game_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/about_button"
        android:textSize="25sp"
        android:background="@color/colorAccent"
        android:layout_below="@+id/check_invites_button"
        android:onClick="aboutButtonClicked"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:visibility="gone"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:onClick="signOutButtonClicked" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/games_controller_white"
        android:id="@+id/achievements_button"
        android:scaleType="fitCenter"
        android:background="@color/colorAccent"
        android:layout_alignTop="@+id/sign_in_button"
        android:layout_alignParentRight="true"
        android:onClick="achievementsClicked"
        android:layout_alignParentBottom="true" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/ic_settings_white_48dp"
        android:id="@+id/settings_button"
        android:scaleType="fitCenter"
        android:background="@color/colorAccent"
        android:layout_alignTop="@+id/sign_in_button"
        android:layout_alignParentLeft="true"
        android:onClick="settingsButtonClicked"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/main_title"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_slogan"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="true"
        android:textColor="@color/materialcolorpicker__white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
